test/assets/error/included.hera
SET(R1, 10)
SET(R2, 32)
ADD(R1, R2)  // error!
